--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants>TRACE;ANGLE, MESA</DefineConstants>
+    <DefineConstants>TRACE;ANGLE, MESA, Superluminal</DefineConstants>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <DocumentationFile></DocumentationFile>
