--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,6 +14,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <FluentValidationExcludedCultures Include="cs;da;de;es;fa;fi;fr;it;ko;mk;nl;pl;pt;ru;sv;tr;zh-CN;zh-Hans;zh-Hant;pt-BR;ja">
+      <InProject>false</InProject>
+    </FluentValidationExcludedCultures>
+  </ItemGroup>
+
+  <Target Name="RemoveTranslationsAfterBuild" AfterTargets="AfterBuild">
+    <RemoveDir Directories="@(FluentValidationExcludedCultures->'$(OutputPath)%(Filename)')" />
+  </Target>
+
+  <ItemGroup>
     <Compile Remove="Assets\Scripts\CustomMainArgsScript.cs" />
     <Compile Remove="Assets\Scripts\CustomMainScript.cs" />
     <Compile Remove="Assets\Scripts\MainScript.cs" />
