[Graphics] SDF text rendering

--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <None Remove="Assets\FontShaders\VertColorNoDiscard.frag" />
     <None Remove="Assets\FontShaders\VertColorNoDiscard.xml" />
+    <None Remove="Assets\FontShaders\Winding.frag" />
+    <None Remove="Assets\FontShaders\Winding.xml" />
     <None Remove="Assets\FontShaders\WindingAA.frag" />
     <None Remove="Assets\FontShaders\WindingAA.vert" />
     <None Remove="Assets\FontShaders\WindingAA.xml" />
@@ -97,6 +99,18 @@
     <None Update="AssetsNativeLibs\Superluminal\PerformanceAPI.dll" Condition="$(DefineConstants.Contains('Superluminal'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\FontShaders\GenerateSDF.frag">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\FontShaders\GenerateSDF.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\FontShaders\SDF.frag">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\FontShaders\SDF.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup Condition="$(DefineConstants.Contains('FreeType'))">
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
@@ -115,6 +129,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Assets\FontShaders\VertColorNoDiscard.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\FontShaders\Winding.frag">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\FontShaders\Winding.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Assets\FontShaders\WindingAA.frag">
