[UI] Fixed mouse input detection on children outside parents. Added test for it.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -386,6 +386,9 @@
     <None Update="Assets\uitesttemplates\NineSlice.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\uitesttemplates\outofparentmousetest.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\uitesttemplates\OutsideMargins.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
