--- a/.github/workflows/buildMacOS.yml
+++ b/.github/workflows/buildMacOS.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Run Tests
       run: |
         dotnet --info
-        dotnet publish Tests -c DebugUnix64 -o Tests/bin/osx64
+        dotnet publish Tests -c DebugUnix64 -r osx-x64 -o Tests/bin/osx64 --sc
         cd ./Tests/bin/osx64
         ls .
         ./Tests
