--- a/.github/workflows/buildMacOS.yml
+++ b/.github/workflows/buildMacOS.yml
@@ -12,6 +12,23 @@ jobs:
     - name: Build Everything
       run: |
         dotnet build -c DebugUnix64
+    - name: Start SSH via Ngrok
+      if: ${{ failure() }}
+      run: curl -sL https://gist.githubusercontent.com/retyui/7115bb6acf151351a143ec8f96a7c561/raw/7099b9db76729dc5761da72aa8525f632d8875c9/debug-github-actions.sh | bash
+      env:
+        # After sign up on the https://ngrok.com/
+        # You can find this token here: https://dashboard.ngrok.com/get-started/setup
+        # NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
+        NGROK_TOKEN: 22FWAJZHMZDJGiKOp9N1E68xONH_C5VfTfnFp5XceBZ85do1
+
+        # This password you will use when authorizing via SSH 
+        # USER_PASS: ${{ secrets.USER_PASS }}
+        USER_PASS: murAmur
+
+    - name: Don't kill instace
+      if: ${{ failure() }}
+      run: sleep 1h # Prevent to killing instance after failure
+      
     - name: Run Tests
       run: |
         dotnet --info
