--- a/.github/workflows/buildLinux.yml
+++ b/.github/workflows/buildLinux.yml
@@ -9,6 +9,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@master
+    - uses: openrndr/setup-opengl@v1.1
     - name: Build Everything
       run: |
         dotnet --info
