--- a/.github/workflows/buildLinux.yml
+++ b/.github/workflows/buildLinux.yml
@@ -17,8 +17,10 @@ jobs:
     - name: Run Tests
       run: |
         cd ./Tests/bin/linux
-        ls .
-        LD_LIBRARY_PATH=mesa-18.2.3/usr/local/lib/x86_64-linux-gnu GALLIUM_DRIVER=swr xvfb-run ./Tests
+        LD_LIBRARY_PATH=../../../mesa-18.2.3/usr/local/lib/x86_64-linux-gnu GALLIUM_DRIVER=swr xvfb-run glxinfo
+        LD_LIBRARY_PATH=../../../mesa-18.2.3/usr/local/lib/x86_64-linux-gnu GALLIUM_DRIVER=swr xvfb-run ./Tests
+        LD_LIBRARY_PATH=mesa-18.2.3/usr/local/lib/x86_64-linux-gnu GALLIUM_DRIVER=swr xvfb-run glxinfo
+        LD_LIBRARY_PATH=mesa-18.2.3/usr/local/lib/x86_64-linux-gnu GALLIUM_DRIVER=swr xvfb-run ./Tests/bin/linux/Tests
     - name: Upload Test Artifact
       if: always()
       uses: actions/upload-artifact@master
