--- a/.github/workflows/buildLinux.yml
+++ b/.github/workflows/buildLinux.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Run Tests
       run: |
         cd ./Tests/bin/linux
-        LD_LIBRARY_PATH=../../../mesa-18.2.3/usr/local/lib/x86_64-linux-gnu GALLIUM_DRIVER=swr xvfb-run ./Tests
+        LD_LIBRARY_PATH=../../../mesa-18.2.3/usr/local/lib/x86_64-linux-gnu GALLIUM_DRIVER=swr xvfb-run sudo ./Tests
     - name: Upload Test Artifact
       if: always()
       uses: actions/upload-artifact@master
