[Tests] Added test for multi primitive batching.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -139,6 +139,18 @@
     <None Update="Assets\CachedResults\RenderComposerCustomBatch.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\CachedResults\RenderComposerMultiBatchVariant0.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\CachedResults\RenderComposerMultiBatchVariant1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\CachedResults\RenderComposerMultiBatchVariant2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\CachedResults\RenderComposerMultiBatchVariant3.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\CachedResults\RenderComposerSpriteLimitTest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
