[Graphics] Skeletal animation

--- a/Emotion.PostBuildTool/Emotion.PostBuildTool.csproj
+++ b/Emotion.PostBuildTool/Emotion.PostBuildTool.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AssimpNet" Version="4.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Emotion\Emotion.csproj" />
   </ItemGroup>
 
