--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -62,6 +62,8 @@
     <None Remove="Assets\Shaders\OutlineShader.xml" />
     <None Remove="Assets\Shaders\RoundedRectangle.frag" />
     <None Remove="Assets\Shaders\RoundedRectangle.xml" />
+    <None Remove="Assets\Shaders\SkeletalAnim.vert" />
+    <None Remove="Assets\Shaders\SkeletalAnim.xml" />
     <None Remove="Assets\Shaders\TextureColorMask.frag" />
     <None Remove="Assets\Shaders\TextureColorMask.xml" />
   </ItemGroup>
@@ -160,6 +162,8 @@
     <EmbeddedResource Include="Assets\Shaders\Blur.xml">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Shaders\SkeletalAnim.xml" />
+    <EmbeddedResource Include="Assets\Shaders\SkeletalAnim.vert" />
     <EmbeddedResource Include="Assets\Shaders\OutlineShader.frag">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
